[gd_scene load_steps=5 format=3 uid="uid://cigqt0kjqfuw2"]

[ext_resource type="Script" path="res://pages/login/saves_list_item.gd" id="2_upj3j"]
[ext_resource type="PackedScene" uid="uid://bjgbkm0q3g02x" path="res://common/interface/craft_display/craft_display.tscn" id="3_cismy"]
[ext_resource type="Texture2D" uid="uid://duotyrshpkhha" path="res://theme/button_x.png" id="4_p3g58"]
[ext_resource type="Texture2D" uid="uid://bhxn77jhp6maq" path="res://theme/button_x_ruby.png" id="5_v2g3n"]

[node name="SavesListItem" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2
theme_type_variation = &"PanelContainerDarken"
script = ExtResource("2_upj3j")

[node name="SelectButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CraftPreview" type="Panel" parent="MarginContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"PanelDarken"

[node name="CraftDisplay" parent="MarginContainer/HBoxContainer/CraftPreview" instance=ExtResource("3_cismy")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Details" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Nick" type="Label" parent="MarginContainer/HBoxContainer/Details"]
unique_name_in_owner = true
layout_mode = 2
text = "Chester McTester"

[node name="Score" type="Label" parent="MarginContainer/HBoxContainer/Details"]
unique_name_in_owner = true
layout_mode = 2
text = "100.000.000"

[node name="DeleteButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_vertical = 0
texture_normal = ExtResource("4_p3g58")
texture_pressed = ExtResource("5_v2g3n")
texture_hover = ExtResource("5_v2g3n")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
